lib/tests/fixtures/compiler/evaluation/variable_in_type_spec.baseline
Error: variable_in_type_spec.pp:1:26: node 'test': variables cannot be used in type specifications.
  type MyInteger = Integer[$x]
                           ^~
